--- a/frontend/public/locales/ar.json
+++ b/frontend/public/locales/ar.json
@@ -37,6 +37,7 @@
     "warning": "تحذير",
     "info": "معلومة",
     "view": "عرض",
+    "viewAll": "عرض الكل",
     "download": "تنزيل",
     "upload": "رفع",
     "saveAllChanges": "حفظ كل التغييرات",
@@ -127,176 +128,104 @@
     "totalRevenue": "إجمالي الإيرادات",
     "callsOverTime": "المكالمات خلال الفترة الزمنية",
     "outcomes": "نتائج المكالمات",
+    "outcomesBreakdown": "تحليل نتائج المكالمات",
     "recentActivities": "آخر النشاطات",
     "topDeals": "أفضل الصفقات",
     "needsAttention": "يحتاج متابعة",
     "quickActions": "الإجراءات السريعة",
     "salesPipeline": "قمع المبيعات",
-    "liveCallingBar": "المكالمات الحية"
+    "liveCallingBar": "المكالمات الحية",
+    "bookedToday": "حجز اليوم",
+    "totalCallsToday": "إجمالي المكالمات اليوم"
   },
   "calls": {
     "title": "المكالمات",
     "subtitle": "إدارة ومتابعة جميع المكالمات الهاتفية",
     "allCalls": "كل المكالمات",
     "recentCalls": "المكالمات الأخيرة",
+    "viewAllCalls": "عرض كل المكالمات",
+    "callDetails": "تفاصيل المكالمة",
     "callHistory": "سجل المكالمات",
     "phoneNumber": "رقم الهاتف",
     "customer": "العميل",
-    "agent": "الموظف",
-    "outcome": "نتيجة المكالمة",
-    "recording": "التسجيل الصوتي",
-    "transcript": "النص المكتوب",
-    "listen": "استماع",
+    "vehicle": "المركبة",
+    "purpose": "الغرض",
+    "outcome": "النتيجة",
     "booked": "تم الحجز",
-    "interested": "مهتم بالعرض",
-    "notInterested": "غير مهتم",
-    "noAnswer": "عدم الرد",
-    "callback": "طلب معاودة الاتصال",
-    "voicemail": "بريد صوتي"
+    "sentiment": "الانطباع",
+    "nextAction": "الإجراء التالي",
+    "actions": "الإجراءات",
+    "agent": "الموظف",
+    "recording": "التسجيل الصوتي",
+    "transcript": "نص المحادثة",
+    "listen": "استماع",
+    "callNow": "اتصل الآن",
+    "retry": "إعادة المحاولة",
+    "assignToHuman": "تحويل لموظف",
+    "done": "منته",
+    "humanCall": "مكالمة بشرية",
+    "retryNow": "أعد المحاولة الآن",
+    "playRecording": "تشغيل التسجيل",
+    "callSummary": "ملخص المكالمة",
+    "addNote": "إضافة ملاحظة",
+    "flagForReview": "وضع علامة للمراجعة",
+    "outcomes": {
+      "booked": "تم الحجز",
+      "voicemail": "بريد صوتي",
+      "noAnswer": "لا يجيب",
+      "callback": "طلب معاودة",
+      "busy": "مشغول",
+      "wrongNumber": "رقم خاطئ",
+      "optOut": "رفض الخدمة"
+    },
+    "purposes": {
+      "readyForPickup": "جاهز للاستلام",
+      "serviceUpdate": "تحديث الصيانة",
+      "serviceFollowUp": "متابعة الصيانة",
+      "appointment": "موعد",
+      "reminder": "تذكير"
+    },
+    "sentiments": {
+      "positive": "إيجابي",
+      "neutral": "محايد",
+      "negative": "سلبي"
+    },
+    "times": {
+      "tomorrow": "غداً",
+      "today": "اليوم",
+      "am": "صباحاً",
+      "pm": "مساءً"
+    }
   },
-  "campaigns": {
-    "title": "الحملات التسويقية",
-    "subtitle": "إنشاء وإدارة حملات الاتصال الآلي",
-    "activeCampaigns": "الحملات النشطة",
-    "createCampaign": "إنشاء حملة جديدة",
-    "campaignName": "اسم الحملة",
-    "campaignType": "نوع الحملة",
-    "targetAudience": "الفئة المستهدفة",
-    "script": "نص المكالمة",
-    "schedule": "الجدولة الزمنية",
-    "leads": "العملاء المحتملين",
-    "callsCompleted": "المكالمات المنجزة",
-    "successRate": "نسبة النجاح",
-    "startCampaign": "بدء الحملة",
-    "pauseCampaign": "إيقاف مؤقت",
-    "stopCampaign": "إيقاف نهائي",
-    "viewDetails": "التفاصيل الكاملة"
+  "attention": {
+    "needsAttention": "يحتاج متابعة",
+    "viewAll": "عرض الكل",
+    "thirdFailedAttempt": "محاولة فاشلة ثالثة",
+    "callbackRequested": "طلب معاودة اتصال",
+    "negativeSentiment": "انطباع سلبي تم رصده",
+    "pickupTimeMissing": "موعد الاستلام غير محدد",
+    "plateMismatch": "عدم تطابق لوحة المركبة",
+    "retryNow": "أعد المحاولة الآن",
+    "schedule": "جدولة",
+    "review": "مراجعة",
+    "complete": "إكمال",
+    "verify": "تأكيد",
+    "complaintAbout": "شكوى بخصوص"
   },
-  "scripts": {
-    "title": "نصوص المكالمات",
-    "subtitle": "إدارة نصوص المكالمات والقوالب الجاهزة",
-    "createScript": "إنشاء نص جديد",
-    "scriptName": "عنوان النص",
-    "scriptContent": "محتوى النص",
-    "category": "التصنيف",
-    "aiGenerated": "مُنشأ بالذكاء الاصطناعي",
-    "customScript": "نص مخصص",
-    "generateWithAI": "إنشاء بالذكاء الاصطناعي"
-  },
-  "customers": {
-    "title": "العملاء",
-    "subtitle": "إدارة بيانات العملاء وجهات الاتصال",
-    "addCustomer": "إضافة عميل جديد",
-    "customerName": "اسم العميل",
-    "email": "البريد الإلكتروني",
-    "phone": "رقم الهاتف",
-    "company": "الشركة",
-    "lastContact": "آخر تواصل",
-    "callHistory": "سجل المكالمات",
-    "notes": "الملاحظات",
-    "tags": "التصنيفات"
-  },
-  "appointments": {
-    "title": "المواعيد",
-    "subtitle": "إدارة وجدولة المواعيد",
-    "scheduleAppointment": "حجز موعد جديد",
-    "appointmentDate": "تاريخ الموعد",
-    "appointmentTime": "وقت الموعد",
-    "customerName": "اسم العميل",
-    "serviceType": "نوع الخدمة",
-    "upcoming": "المواعيد القادمة",
-    "past": "المواعيد السابقة",
-    "confirmed": "مؤكد",
-    "cancelled": "ملغي"
-  },
-  "qa": {
-    "title": "ضمان الجودة",
-    "subtitle": "مراقبة الجودة وتحليل أداء المكالمات",
-    "overallQuality": "مستوى الجودة العام",
-    "agentPerformance": "أداء الموظفين",
-    "callQuality": "جودة الاتصال",
-    "complianceScore": "درجة الالتزام بالمعايير",
-    "sentimentAnalysis": "تحليل انطباع العميل",
-    "trends": "الاتجاهات",
-    "reports": "التقارير"
-  },
-  "settings": {
-    "title": "الإعدادات",
-    "subtitle": "إدارة حسابك وإعدادات التطبيق",
-    "account": "الحساب",
-    "organization": "بيانات الشركة",
-    "notifications": "الإشعارات",
-    "appearance": "الشكل والمظهر",
-    "security": "الأمان",
-    "profile": "الملف الشخصي",
-    "fullName": "الاسم الكامل",
-    "email": "البريد الإلكتروني",
-    "phone": "رقم الهاتف",
-    "role": "المسمى الوظيفي",
-    "bio": "نبذة تعريفية",
-    "timezone": "المنطقة الزمنية",
-    "language": "اللغة",
-    "dateFormat": "صيغة التاريخ",
-    "currency": "العملة",
-    "theme": "المظهر",
-    "darkMode": "الوضع الداكن",
-    "lightMode": "الوضع الفاتح",
-    "systemMode": "حسب النظام",
-    "changePassword": "تغيير كلمة المرور",
-    "currentPassword": "كلمة المرور الحالية",
-    "newPassword": "كلمة المرور الجديدة",
-    "confirmPassword": "تأكيد كلمة المرور",
-    "twoFactor": "المصادقة الثنائية",
-    "enableTwoFactor": "تفعيل المصادقة الثنائية",
-    "apiKeys": "مفاتيح واجهة البرمجة",
-    "integrations": "التكاملات والربط",
-    "organizationDetails": "معلومات الشركة",
-    "organizationName": "اسم الشركة",
-    "industry": "القطاع",
-    "size": "حجم الشركة",
-    "address": "العنوان",
-    "city": "المدينة",
-    "country": "الدولة",
-    "notificationPreferences": "إعدادات الإشعارات",
-    "emailNotifications": "إشعارات البريد الإلكتروني",
-    "pushNotifications": "الإشعارات الفورية",
-    "smsNotifications": "إشعارات الرسائل النصية",
-    "callNotifications": "إشعارات المكالمات",
-    "campaignNotifications": "إشعارات الحملات",
-    "systemNotifications": "إشعارات النظام",
-    "accentColor": "اللون المميز",
-    "fontSize": "حجم الخط",
-    "compactMode": "الوضع المضغوط",
-    "animations": "الحركات التفاعلية",
-    "dataExport": "تصدير البيانات",
-    "exportData": "تصدير البيانات",
-    "importData": "استيراد البيانات",
-    "deleteAccount": "حذف الحساب",
-    "dangerZone": "منطقة الخطر",
-    "help": "المساعدة والدعم",
-    "documentation": "دليل الاستخدام",
-    "contactSupport": "التواصل مع الدعم الفني",
-    "feedback": "إرسال ملاحظاتك"
+  "quickActions": {
+    "title": "الإجراءات السريعة"
   },
   "stats": {
     "today": "اليوم",
+    "yesterday": "أمس",
     "thisWeek": "هذا الأسبوع",
     "thisMonth": "هذا الشهر",
     "thisYear": "هذا العام",
-    "vs": "بالمقارنة مع",
-    "increase": "زيادة",
-    "decrease": "نقصان",
-    "from": "من",
-    "to": "إلى"
+    "vs": "بالمقارنة مع"
   },
   "errors": {
     "somethingWentWrong": "حدث خطأ غير متوقع",
     "tryAgain": "يرجى المحاولة مرة أخرى",
-    "notFound": "الصفحة غير موجودة",
-    "unauthorized": "غير مصرح لك بالدخول",
-    "forbidden": "ممنوع الوصول",
-    "serverError": "خطأ في الخادم",
-    "networkError": "خطأ في الاتصال بالشبكة",
-    "validationError": "خطأ في البيانات المُدخلة"
+    "notFound": "الصفحة غير موجودة"
   }
 }
