Performance changes especially to backend

--- a/frontend/public/locales/ar.json
+++ b/frontend/public/locales/ar.json
@@ -1,12 +1,12 @@
 {
   "nav": {
-    "dashboard": "الرئيسية",
+    "dashboard": "لوحة التحكم",
     "calls": "المكالمات",
-    "campaigns": "الحملات التسويقية",
-    "scripts": "نصوص المكالمات",
+    "campaigns": "الحملات الإعلانية",
+    "scripts": "سكريبتات المكالمات",
     "customers": "العملاء",
     "appointments": "المواعيد",
-    "qa": "ضمان الجودة",
+    "qa": "مراقبة الجودة",
     "settings": "الإعدادات"
   },
   "common": {
@@ -16,46 +16,46 @@
     "edit": "تعديل",
     "add": "إضافة",
     "search": "بحث",
-    "filter": "تصفية",
+    "filter": "فلترة",
     "export": "تصدير",
     "import": "استيراد",
-    "loading": "تحميل…",
-    "noData": "لا توجد معلومات متاحة",
+    "loading": "جاري التحميل...",
+    "noData": "لا توجد بيانات",
     "actions": "الإجراءات",
     "status": "الحالة",
     "date": "التاريخ",
     "time": "الوقت",
     "duration": "المدة",
-    "total": "الإجمالي",
+    "total": "المجموع",
     "active": "نشط",
     "inactive": "غير نشط",
     "completed": "مكتمل",
-    "pending": "قيد المعالجة",
+    "pending": "قيد الانتظار",
     "failed": "فشل",
     "success": "نجح",
     "error": "خطأ",
     "warning": "تحذير",
-    "info": "معلومة",
+    "info": "معلومات",
     "view": "عرض",
     "viewAll": "عرض الكل",
-    "download": "تنزيل",
+    "download": "تحميل",
     "upload": "رفع",
-    "saveAllChanges": "حفظ كل التغييرات",
+    "saveAllChanges": "حفظ جميع التغييرات",
     "create": "إنشاء",
     "update": "تحديث",
-    "remove": "إزالة",
+    "remove": "حذف",
     "close": "إغلاق",
     "open": "فتح",
     "back": "رجوع",
     "next": "التالي",
     "previous": "السابق",
     "refresh": "تحديث",
-    "reset": "إعادة تعيين",
+    "reset": "إعادة ضبط",
     "apply": "تطبيق",
     "clear": "مسح",
     "select": "اختيار",
     "selectAll": "تحديد الكل",
-    "deselectAll": "إلغاء تحديد الكل",
+    "deselectAll": "إلغاء التحديد",
     "confirm": "تأكيد",
     "yes": "نعم",
     "no": "لا",
@@ -93,7 +93,7 @@
     "done": "تم",
     "new": "جديد",
     "all": "الكل",
-    "none": "لا شيء",
+    "none": "لا يوجد",
     "other": "أخرى",
     "custom": "مخصص",
     "default": "افتراضي",
@@ -114,66 +114,66 @@
     "basic": "أساسي",
     "required": "مطلوب",
     "optional": "اختياري",
-    "searchPlaceholder": "ابحث هنا…",
+    "searchPlaceholder": "ابحث هنا...",
     "selectPlaceholder": "اختر من القائمة",
-    "noResults": "لم يتم العثور على أي نتائج",
-    "loadingResults": "تحميل النتائج…"
+    "noResults": "لم يتم العثور على نتائج",
+    "loadingResults": "جاري تحميل النتائج..."
   },
   "dashboard": {
-    "title": "الصفحة الرئيسية",
-    "subtitle": "نظرة شاملة على نشاط المكالمات ومؤشرات الأداء",
+    "title": "لوحة التحكم",
+    "subtitle": "نظرة شاملة على أداء المكالمات والإحصائيات",
     "totalCalls": "إجمالي المكالمات",
-    "successRate": "نسبة النجاح",
+    "successRate": "معدل النجاح",
     "avgDuration": "متوسط مدة المكالمة",
     "totalRevenue": "إجمالي الإيرادات",
-    "callsOverTime": "المكالمات خلال الفترة الزمنية",
+    "callsOverTime": "المكالمات عبر الزمن",
     "outcomes": "نتائج المكالمات",
-    "outcomesBreakdown": "تحليل نتائج المكالمات",
-    "recentActivities": "آخر النشاطات",
+    "outcomesBreakdown": "تفصيل النتائج",
+    "recentActivities": "آخر الأنشطة",
     "topDeals": "أفضل الصفقات",
     "needsAttention": "يحتاج متابعة",
-    "quickActions": "الإجراءات السريعة",
-    "salesPipeline": "قمع المبيعات",
-    "liveCallingBar": "المكالمات الحية",
-    "bookedToday": "حجز اليوم",
-    "totalCallsToday": "إجمالي المكالمات اليوم"
+    "quickActions": "إجراءات سريعة",
+    "salesPipeline": "مسار المبيعات",
+    "liveCallingBar": "المكالمات المباشرة",
+    "bookedToday": "الحجوزات اليوم",
+    "totalCallsToday": "إجمالي مكالمات اليوم"
   },
   "calls": {
     "title": "المكالمات",
     "subtitle": "إدارة ومتابعة جميع المكالمات الهاتفية",
     "allCalls": "كل المكالمات",
     "recentCalls": "المكالمات الأخيرة",
-    "viewAllCalls": "عرض كل المكالمات",
+    "viewAllCalls": "عرض جميع المكالمات",
     "callDetails": "تفاصيل المكالمة",
     "callHistory": "سجل المكالمات",
     "phoneNumber": "رقم الهاتف",
     "customer": "العميل",
-    "vehicle": "المركبة",
+    "vehicle": "السيارة",
     "purpose": "الغرض",
     "outcome": "النتيجة",
     "booked": "تم الحجز",
     "sentiment": "الانطباع",
     "nextAction": "الإجراء التالي",
     "actions": "الإجراءات",
-    "agent": "الموظف",
-    "recording": "التسجيل الصوتي",
+    "agent": "الوكيل",
+    "recording": "التسجيل",
     "transcript": "نص المحادثة",
     "listen": "استماع",
     "callNow": "اتصل الآن",
-    "retry": "إعادة المحاولة",
+    "retry": "إعادة محاولة",
     "assignToHuman": "تحويل لموظف",
-    "done": "منته",
+    "done": "تم",
     "humanCall": "مكالمة بشرية",
     "retryNow": "أعد المحاولة الآن",
     "playRecording": "تشغيل التسجيل",
     "callSummary": "ملخص المكالمة",
     "addNote": "إضافة ملاحظة",
-    "flagForReview": "وضع علامة للمراجعة",
+    "flagForReview": "تحديد للمراجعة",
     "outcomes": {
       "booked": "تم الحجز",
-      "voicemail": "بريد صوتي",
-      "noAnswer": "لا يجيب",
-      "callback": "طلب معاودة",
+      "voicemail": "البريد الصوتي",
+      "noAnswer": "لم يرد",
+      "callback": "طلب إعادة اتصال",
       "busy": "مشغول",
       "wrongNumber": "رقم خاطئ",
       "optOut": "رفض الخدمة"
@@ -193,38 +193,38 @@
     "times": {
       "tomorrow": "غداً",
       "today": "اليوم",
-      "am": "صباحاً",
-      "pm": "مساءً"
+      "am": "ص",
+      "pm": "م"
     }
   },
   "attention": {
     "needsAttention": "يحتاج متابعة",
     "viewAll": "عرض الكل",
-    "thirdFailedAttempt": "محاولة فاشلة ثالثة",
-    "callbackRequested": "طلب معاودة اتصال",
-    "negativeSentiment": "انطباع سلبي تم رصده",
-    "pickupTimeMissing": "موعد الاستلام غير محدد",
-    "plateMismatch": "عدم تطابق لوحة المركبة",
+    "thirdFailedAttempt": "المحاولة الثالثة فشلت",
+    "callbackRequested": "طلب إعادة اتصال",
+    "negativeSentiment": "تم رصد انطباع سلبي",
+    "pickupTimeMissing": "وقت الاستلام غير محدد",
+    "plateMismatch": "عدم تطابق رقم اللوحة",
     "retryNow": "أعد المحاولة الآن",
     "schedule": "جدولة",
     "review": "مراجعة",
     "complete": "إكمال",
-    "verify": "تأكيد",
-    "complaintAbout": "شكوى بخصوص"
+    "verify": "تحقق",
+    "complaintAbout": "شكوى حول"
   },
   "quickActions": {
-    "title": "الإجراءات السريعة"
+    "title": "إجراءات سريعة"
   },
   "stats": {
     "today": "اليوم",
     "yesterday": "أمس",
     "thisWeek": "هذا الأسبوع",
     "thisMonth": "هذا الشهر",
-    "thisYear": "هذا العام",
-    "vs": "بالمقارنة مع"
+    "thisYear": "هذه السنة",
+    "vs": "مقابل"
   },
   "errors": {
-    "somethingWentWrong": "حدث خطأ غير متوقع",
+    "somethingWentWrong": "حدث خطأ ما",
     "tryAgain": "يرجى المحاولة مرة أخرى",
     "notFound": "الصفحة غير موجودة"
   }
